--- a/src/css/all.css
+++ b/src/css/all.css
@@ -13,3 +13,20 @@
     --color-red_error : #D50000;
     --color-green_success : #64DD17;
 }
+*{
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+.c-container{
+    width: 100%;
+    min-height: 100%;
+}
