--- a/src/css/scoreboard.css
+++ b/src/css/scoreboard.css
@@ -47,9 +47,10 @@
 }
 .c-scoreboard-classment{
     color: white;
-    padding: 30px;
     width: 600px;
     margin-top: 50px;
+    padding: 30px 30px 100px;
+
 }
 .c-scoreboard-classment h1,h2,h4{
     font-style: italic ;
@@ -98,8 +99,26 @@
 
 .e-scoreboard-pos{
     background-color: #FAFAFA;
-    width: 50px;
+    margin:40px;
     color: black;
     border-radius: 10px;
+    font-weight: bold;
 
+}
+@media (max-width: 768px) {
+    .c-scoreboard-classment{
+        padding-bottom: 100px;
+    }
+}
+@media (min-width: 769px) and (max-width: 1024px){
+    .c-scoreboard-classment{
+        padding-bottom: 100px;
+    }
+}
+@media (min-width: 1025px) and (max-width: 1500px){
+
+    .c-scoreboard-classment{
+        padding-bottom: 50px;
+        margin-top: 20px;
+    }
 }
