--- a/src/css/scoreboard.css
+++ b/src/css/scoreboard.css
@@ -109,6 +109,9 @@
     .c-scoreboard-classment{
         padding-bottom: 100px;
     }
+    .e-scoreboard-pos{
+        margin:10px;
+    }
 }
 @media (min-width: 769px) and (max-width: 1024px){
     .c-scoreboard-classment{
