--- a/src/css/compare.css
+++ b/src/css/compare.css
@@ -1,9 +1,29 @@
-.c-comparepage{
+.c-compare{
     position: relative;
     background-image: url("../ressources/images/BackgroundImage1.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    padding-top: 128px;
+    font-family: Lato;
+}
+
+.c-compare__filterDriver
+{
+    margin: auto;
+    width: 40%;
+    padding: 20px;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #000000 0%, #272727 62.5%, #000000 100%);
+    opacity: 90%;
+    color: white;
+}
+
+#compareDriversTitle
+{
+    padding-bottom: 20px;
+    font-style: italic;
+    font-size: 2.5rem;
 }
 
 .c-compare__form {
@@ -11,58 +31,37 @@
     justify-content: center;
     padding-top: 40px;
 }
-.c-scoreboard-form h1 {
-    padding-right: 10px;
-}
 
-.form-searchBar input[type="number"] {
-    height: 50px;
-    width: 200px;
+.c-compare__form input[type="number"],input[type="text"] {
+    height: 25px;
+    width: 60%;
     background-color: #FAFAFA;
-    border-radius: 16px;
+    border-radius: 5px;
     border: none;
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding-left: 15px;
+    margin-bottom: 15px;
+}
+.c-compare__form input[type="number"]{
+    margin-left: 13px;
+}
+.c-compare__form input[type="text"]{
+    margin-right: 15px;
+}
+#circuitlabel{
+   padding-right: 13px;
+}
+#radio_compare{
+    color: #FAFAFA;
 }
 
-#year
-{
-    width: 60%;
+#buttonConfirm{
+    background-color: #FAFAFA;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+    font-weight: bold;
 }
-
-#circuit
-{
-    width: 60%;
-}
-
-
-
-
-#compareDrivers
-{
-    border-style: solid;
-    border-color: black;
-
-    display: block;
-    margin: auto;
-    width: 40%;
-    padding: 20px;
-
-    border-radius: 10px;
-
-    background-color: black;
-    color: white;
-}
-
-#compareDriversTitle
-{
-    padding-bottom: 20px;
-}
-
-
-
-
-
 
 .c-compare__popup{
     display: flex;
@@ -71,7 +70,7 @@
 .Popup{
     font-family: Roboto;
     position:fixed;
-    top:10%;
+    top:20%;
     background-color: #dedddd;
     padding: 100px;
     border-radius: 10px;
@@ -95,23 +94,15 @@
 }
 
 
-
-
-
-
 #PilotOnCompare
 {
-    border-style: solid;
-    border-color: black;
-
     display: block;
     margin: 50px auto;
     width: 40%;
     padding: 20px;
-
     border-radius: 10px;
-
-    background-color: black;
+    background: linear-gradient(180deg, #000000 0%, #272727 62.5%, #000000 100%);
+    opacity: 90%;
     color: white;
 }
 
